# uv-singularity-template

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  container.def  flake.nix  pyproject.toml  skills-lock.json
.agents/skills/marimo-batch/references/: grid.py  starting-point.py
.github/workflows/: ci.yml  singularity.yml
notebooks/: notebook.py  postal_code.py
